syntax = "proto3";
package game;

import "google/protobuf/empty.proto";


service GameService {
    rpc ListGames (google.protobuf.Empty) returns (ListGamesReply);
    rpc CreateGame (CreateGameRequest) returns (CreateGameReply);
    rpc DeleteGame (DeleteGameRequest) returns (google.protobuf.Empty);
}

message Game {
    int32 id = 1;
    string name = 2;
}

message ListGamesReply {
    repeated Game games = 1;
}

message CreateGameRequest {
    string name = 2;
}

message CreateGameReply {
    int32 id = 1;
}

message DeleteGameRequest {
    int32 id = 1;
}



